# opencv-course

./: .flake8  .gitignore  LICENSE  Makefile  README.md  basic.py  bitwise.py  draw.py  faces_train.py  gradients.py  histogram.py  pyproject.toml  read.py  requirements.txt  splitmerge.py  thresh.py  transformations.py
.github/workflows/: test.yml
Advanced/: bitwise.py  blurring.py  colour_spaces.py  gradients.py  histogram.py  masking.py  splitmerge.py
Advanced - Section/: blurring.py  splitmerge.py
Basics/: basic_functions.py  contours.py  draw.py  read.py  thresh.py  transformations.py
Basics - Section/: draw.py  read.py
Capstone/: simpsons.ipynb
Face/: face_recognition.py
Face Detection and Recognition/: face_detect.py  face_recognition.py  faces_train.py  features.npy
Faces/: face_detect.py  face_recognition.py  faces_train.py  features.npy
Opencv Advanced/: bitwise.py  blurring.py  colour_spaces.py  gradients.py  histogram.py  masking.py  rescale_resize.py  splitmerge.py
Opencv Basics/: basic_functions.py  contours.py  draw.py  read.py  thresh.py  transformations.py
Opencv Face/: face_recognition.py  faces_train.py  labels.npy
Section #1 - Basics/: Resize_and_Rescale.py  basic_functions.py  contours.py  draw.py  read.py  thresh.py  transformations.py
Section #2 - Advanced/: bitwise.py  blurring.py  colour_spaces.py  gradients.py  histogram.py  masking.py  rescale_resize.py  splitmerge.py
Section #3 - Faces/: face_detect.py  face_recognition.py  faces_train.py
Section #4 - Capstone/: simpsons.ipynb  simpsons.py
